Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10142 PL/SQL parser
  3. MDEV-10839

sql_mode=ORACLE: Predefined exceptions: TOO_MANY_ROWS, NO_DATA_FOUND, DUP_VAL_ON_INDEX

    XMLWordPrintable

Details

    Description

      When running in sql_mode=ORACLE, MariaDB should understand predefined exception names.

      BEGIN
        ...
      EXCEPTION
        WHEN TOO_MANY_ROWS THEN ...
        WHEN NO_DATA_FOUND THEN ...
        WHEN OTHERS THEN NULL;
      END;
      

      Under terms of this task we'll implement the most important predefined exceptions:

      • TOO_MANY_ROWS
      • NO_DATA_FOUND
      • DUP_VAL_ON_INDEX

      Other predefined exception names will be implemented by MDEV-10586.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0.5d
                  0.5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.